--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "API for the team",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
+    "devStart": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
