--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon server.js",
     "devStart": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --detectOpenHandles"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -28,5 +31,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "rand-token": "^1.0.1"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5",
+    "mongodb-memory-server": "^8.1.0"
   }
 }
