--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API for the team",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "devStart": "nodemon index.js",
+    "start": "node server.js",
+    "devStart": "nodemon server.js",
     "test": "jest --runInBand --detectOpenHandles"
   },
   "jest": {
